--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,14 +1,13 @@
 [server]
 headless = true
-address = "0.0.0.0"
-port = 5000
+port = 8501
 
 [theme]
-base = "light"
-primaryColor = "#1f77b4"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f0f2f6"
+primaryColor = "#1E88E5"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
+font = "sans serif"
 
 [browser]
 gatherUsageStats = false
